# IA

genetico/: .cproject  .project  CMakeLists.txt  genetic-algorithm.depend  main.cpp
genetico/include/: evolutionary.h  functions.h  genetic_algorithm.h
genetico/results/ackley/: grafico.m
genetico/results/ackley_20_100/: grafico.m
genetico/results/ackley_20_80/: grafico.m
genetico/results/ackley_35_50/: grafico.m
genetico/results/ackley_35_80/: grafico.m
genetico/results/ackley_50_50/: grafico.m
genetico/results/ackley_sem_taxa/: grafico.m
genetico/src/: evolutionary.cpp  functions.cpp  genetic_algorithm.cpp
imunologico/: grafico.m
imunologico/src/br/cefetmg/engcomp/ia/imunologico/: FitnessFunction.java  ImprimeResultados.java  Main.java  Ponto.java  SelecaoClonal.java
perceptron/: alteradataset.py  iris2.data  perceptron.py
